Removed fixed element on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 .title {
   color: rgb(65, 64, 64);
   background: lightgray;
-  font-size: 70px;
+  font-size: 4.5em;
   font-style: italic;
   letter-spacing: 16px;
   width: 100%;
@@ -47,7 +47,6 @@ body {
 
 .on-btn {
   width: 32vw;
-  padding: 20px;
   background: black;
   font-size: 2.5em;
   color: white;
@@ -78,7 +77,7 @@ body {
 .module-Title {
   border-style: groove;
   border-width: 0 0 1px 1px;
-  font-size: 20px;
+  font-size: 1.4em;
   padding: 20px 0 5px 0;
 }
 
@@ -148,11 +147,13 @@ h3 {
 }
 
 #footer {
-  position: fixed;
-  bottom: 0;
-  width: 10vw;
-  height: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   text-align: center;
+  width: 100%;
+  height: 300px;
+  bottom: 0;
 }
 
 .dev-svg {
@@ -181,11 +182,24 @@ h3 {
     margin-top: 15px;
   }
 
+  .first-control {
+    border-width: 0;
+  }
+
   #info-section {
     margin: 0 auto;
   }
 
   .description {
     width: 600px;
+  }
+
+  #footer {
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    width: 10vw;
+    height: 70px;
+    text-align: center;
   }
 }
